# solitaire

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml
crates/assets/: Cargo.toml  README.md
crates/assets/embed/: client.js
crates/assets/embed/wasm/: solitaire.module.wasm
crates/assets/src/: lib.rs
crates/client/: Cargo.toml  README.md  client.js
crates/client/src/: ctx.rs  event_handler.rs  html.rs  js.rs  lib.rs  logging.rs  message_handler.rs
crates/client/src/socket/: ws.rs  ws_handlers.rs
crates/client/www/: index.js  package-lock.json  package.json
crates/controllers/: Cargo.toml  README.md
crates/controllers/src/: admin.rs  home.rs  lib.rs  static_file.rs  testbed.rs  websocket.rs  websocket_msg.rs
crates/controllers/src/forms/: profile_form.rs
crates/controllers/src/util/: actions.rs  ctx.rs  router.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/card/: card.rs  color.rs  deck.rs  rank.rs  suit.rs
crates/core/src/game/: moves.rs
crates/core/src/messages/: req.rs  rsp.rs
crates/service/: Cargo.toml  README.md
crates/service/src/: cache.rs  cfg.rs  conn.rs  ctx.rs  handler.rs  lib.rs  profile.rs
crates/templates/: Cargo.toml  README.md
crates/templates/src/: admin.rs  connections.rs  error.rs  gallery.rs  home.rs  lib.rs  profile.rs  settings.rs  testbed.rs  utils.rs
crates/templates/src/components/: backtrace.rs  card.rs  header.rs  navbar.rs  page.rs  simple.rs
doc/: installing.md  scripts.md
project/android/: readme.md
project/android/app/: build.gradle
project/android/app/src/main/: AndroidManifest.xml
project/android/app/src/main/java/com/kyleu/: App.java  MainActivity.java
project/android/app/src/main/java/com/solitaire/: App.java  AppClient.java  MainActivity.java
project/android/app/src/main/res/layout/: activity_main.xml
project/homebrew/: app.rb  readme.md  update.sh
project/ios/: readme.md
project/ios/ios.xcodeproj/: project.pbxproj
project/rpm/: app.spec  readme.md
project/windows/: app.exe.manifest
src/: app.rs  args.rs  cfg.rs  lib.rs  log.rs  main.rs  server.rs
