[package]
name = "solitaire-assets"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "Embedded web assets for solitaire"
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/solitaire"
license = "MIT"

[dependencies]
rust-embed = { version = "5.2.0", features = ["interpolate-folder-path"] }
