[package]
name = "solitaire-assets"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "Embedded web assets for solitaire"
readme = "README.md"
categories = ["wasm", "web-programming", "web-programming::websocket"]
keywords = ["static", "assets"]
homepage = "https://solitaire.gg"
repository = "https://github.com/kyleu/solitaire"
license = "MIT"

[dependencies]
rust-embed = { version = "5.2.0", features = ["interpolate-folder-path"] }
