[package]
name = "solitaire-core"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "Core classes used by solitaire in the app and WASM"
readme = "README.md"
categories = ["web-programming"]
keywords = ["solitaire"]
homepage = "https://solitaire.gg"
repository = "https://github.com/kyleu/solitaire"
license = "MIT"
build = "build.rs"

[build-dependencies]
built = "0.3.2"

[dependencies]
anyhow = "1.0.26"
bincode = "1.2.1"
derive_more = "0.99.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
