[package]
name = "solitaire-templates"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "HTML templates used by the solitaire server"
readme = "README.md"
categories = ["development-tools"]
keywords = ["templates"]
homepage = "https://solitaire.gg"
repository = "https://github.com/kyleu/solitaire"
license = "MIT"

[dependencies]
solitaire-core = { version = "0.0.1", path = "../core" }
solitaire-service = { version = "0.0.1", path = "../service" }

anyhow = "1.0.26"
maud = "0.21.0"
num_cpus = "1.11.1"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
